--- a/main.tex
+++ b/main.tex
@@ -90,7 +90,7 @@
 
 \personalinfo{%
   % Not all of these are required!
-  \email{kpb3rd@aol.com}
+  \email{kbowers3rd@gmail.com}
   \phone{864.940.6145}
 %   \mailaddress{Åddrésş, Street, 00000 Cóuntry}
   \location{Atlanta, GA}
@@ -131,32 +131,32 @@
 \begin{paracol}{2}
 \cvsection{Experience}
 
-\cvevent{Senior Autonomy Engineer - Autonomy Lead}{Area-I, Inc (an Anduril Company)}{Oct 2020 -- Current}{Atlanta, GA}
+\cvevent{Motion Planning Tech Lead}{Anduril Industries}{Oct 2020 -- Current}{Atlanta, GA}
 \begin{itemize}
-\item Directed the C++ development of autonomy algorithms for multiple concurrent fixed-wing robotics projects. Acted as SME for robotics and algorithms.
-\item Demonstrated ability to quickly develop and scope robust solutions by delivering mission capabilities ahead of schedule and by achieving successful high-profile flight tests.
+\item Drove adoption of my robust and extendable fixed-wing algorithms to adjacent products, improving delivery time and minimizing risk for multiple programs.
+\item Developed technical roadmap and objective prioritization, reaching operational status for programs in short timeframes.
+\item Directed the algorithm design and C++ implementation for motion planning problems, generalizing where possible to enable near-future programs to quickly iterate.
 \item Initiated and established team practices for consistent unit testing, continuous integration, code style, and interview process.
-\item Implemented an automated hardware code deployment method using Docker and Python, saving labor time and reducing risk of user error.
 \end{itemize}
 
 \divider
 
-\cvevent{Research Engineer II}{Georgia Tech Research Institute (ATAS Lab)}{July 2017 -- Oct 2020}{Atlanta, GA}
+\cvevent{Autonomy Research Engineer}{Georgia Tech Research Institute}{July 2017 -- Oct 2020}{Atlanta, GA}
 \begin{itemize}
-\item Led the concept, design, and C++ implementation of novel real-time planning algorithms for multi-agent autonomous aerial systems.
+\item Scoped the concept and led the solution design and C++ implementation of novel real-time motion planning algorithms for multi-agent autonomous aerial systems.
 \item Published three conference papers on fundamental research in bio-inspired swarm algorithms for distributed autonomous multi-robot teams.
-\item Developed machine learning tools for GTRI's open-source multi-agent robotics simulator (SCRIMMAGE) to automate parameter optimization.
+\item Developed machine learning tools for the team's open-source multi-agent robotics simulator (SCRIMMAGE) to automate parameter optimization and speed up algorithm verification.
 \end{itemize}
 
 \divider
 
-\cvevent{Software Engineer}{Boeing Research and Technology (The Boeing Company)}{June 2014 -- July 2017}{Charleston, SC}
+\cvevent{Software Engineer}{Boeing Research and Technology}{June 2014 -- July 2017}{Charleston, SC}
 \begin{itemize}
 \item Published four patents on robotic control and airplane surface inspection.
-\item Developed algorithms for robot arm path planning and inkjet head control to enable painting directly onto 3D aircraft surfaces. 
-\item Designed real-time hardware/software solution for inspecting the fuselage for micrometer defects during manufacturing. This included localizing the scanners to the surface of the airplane in order to display defect locations to the operator.
+\item Developed algorithms for robot arm path planning and inkjet head control to enable painting artwork directly onto 3D aircraft surfaces. The project was showcased during a POTUS visit.
+\item Designed a real-time hardware/software solution for inspecting the fuselage for micrometer defects during manufacturing. This included localizing the scanners to the surface of the airplane in order to display defect locations to the operator.
 \item Led the development of a real-time system to synchronize and calibrate 60+ cameras and sensors across multiple PCs and microcontrollers.
-\item Managed the collaboration between Boeing and Clemson University to sponsor Clemson’s ECE Senior Project, and designed the project challenge for the students.
+\item Managed and designed the Clemson University ECE Senior design project sponsored by Boeing.
 \end{itemize}
 
 % \cvsection{Projects}
@@ -211,18 +211,15 @@
 
 \cvtag{C++}
 \cvtag{Python}
-\cvtag{Git}
-\cvtag{Docker}\\
+\cvtag{Docker}
 \cvtag{CMake}
-\cvtag{ROS}
-\cvtag{SQL/MongoDB}
 
 \divider\smallskip
 
-\cvtag{Algorithms}
-\cvtag{Path Planning}\\
-\cvtag{Computational Geometry}
-\cvtag{Robotics}
+\cvtag{Algorithm Design}
+\cvtag{System Design}\\
+\cvtag{Motion Planning}
+\cvtag{Computational Geometry}\\
 \cvtag{Machine Learning}
 \cvtag{Computer Vision}
 
@@ -242,7 +239,7 @@
 \cvsection{Education}
 
 \cvevent{M.Sc.\ in Computer Science}{Georgia Institute of Technology}
-{2016 - 2018 (part-time)}{}
+{2016 - 2018 (part-time while working full-time)}{}
 {Robotics and Computational Perception}{}
 
 \divider
@@ -262,7 +259,7 @@
 
 \divider
 
-\printbibliography[heading=pubtype,title={\printinfo{\faUsers}{Conference Proceedings}},type=inproceedings]
+\printbibliography[heading=pubtype,title={\printinfo{\faUsers}{Conference Publications}},type=inproceedings]
 
 
 \end{paracol}
