--- a/main.tex
+++ b/main.tex
@@ -131,21 +131,21 @@
 \begin{paracol}{2}
 \cvsection{Experience}
 
-\cvevent{Motion Planning Tech Lead}{Anduril Industries}{Oct 2020 -- Current}{Atlanta, GA}
+\cvevent{Senior Autonomy Engineer - Motion Planning}{Anduril Industries}{Oct 2020 -- Current}{Atlanta, GA}
 \begin{itemize}
-\item Drove adoption of my robust and extendable fixed-wing algorithms to adjacent products, improving delivery time and minimizing risk for multiple programs.
-\item Developed technical roadmap and objective prioritization, reaching operational status for programs in short timeframes.
-\item Directed the algorithm design and C++ implementation for motion planning problems, generalizing where possible to enable near-future programs to quickly iterate.
-\item Initiated and established team practices for consistent unit testing, continuous integration, code style, and interview process.
+\item Began employment at Area-I (Anduril's first major acquisition a few months later), and owned the motion planning capabilities of Altius, a fixed-wing tube-launched drone.
+\item Initiated the transition to being a company-wide Motion Planning SME, driving adoption of Altius' fixed-wing algorithms to other Anduril products which improved delivery time, reliability, and minimized risk for multiple programs.
+\item Directed the algorithm design, scope, and C++ implementation for various fixed-wing robotics projects, generalizing where possible to enable upcoming projects to quickly deliver new features with minimal code rearchitecture.
+\item Established team practices for consistent unit testing, continuous integration, code style, and interview process as the Atlanta software team grew from six to over thirty engineers.
+\item Mentored product teams on design decisions to keep project scope feasible and how to minimize risk by designing the simple, reliable solution driven by first principles and domain knowledge.
 \end{itemize}
 
 \divider
 
 \cvevent{Autonomy Research Engineer}{Georgia Tech Research Institute}{July 2017 -- Oct 2020}{Atlanta, GA}
 \begin{itemize}
-\item Scoped the concept and led the solution design and C++ implementation of novel real-time motion planning algorithms for multi-agent autonomous aerial systems.
+\item Scoped the concept and led the solution design and C++ implementation of real-time motion planning algorithms for multi-agent aerial systems, delivering to various DoD customers on high-profile programs.
 \item Published three conference papers on fundamental research in bio-inspired swarm algorithms for distributed autonomous multi-robot teams.
-\item Developed machine learning tools for the team's open-source multi-agent robotics simulator (SCRIMMAGE) to automate parameter optimization and speed up algorithm verification.
 \end{itemize}
 
 \divider
